# trackpilot-ai-railway-controller

./: .env.example  .gitignore  README.md
.github_temp/workflows/: cpp-core.yml  python-training.yml
core/: CMakeLists.txt
core/include/: ai_model.h  rule_checker.h  scheduling_engine.h  types.h
core/src/: main.cpp
infra/: Dockerfile  docker-compose.yml
python/: requirements.txt
python/training/: imitation_learning.py  train_rl_agent.py
python/utils/: override_logger.py
web/: package.json  vite.config.ts
web/src/components/: SpaceTimeGraph.tsx
web/src/types/: index.ts
